Bit of a messy commit...added a normalize.css file though not used yet, need to test first; fixed various posts, changed pygments syntax color, added headsup and thumbnail classes and more...

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,10 @@ pygments: true
 auto: true
 permalink: /blog/:title
 domain: intransitione.com
+title: intransitione.com
+url: http://www.intransitione.com
+feed: http://feeds.feedburner.com/Intransitionecom
 
-feedburner:
-    id: Intransitionecom
 #
 # # google_analytics:
 # #   account: UA-XXXXX-X
