--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 markdown: rdiscount
 pygments: true
-auto: true
 permalink: /blog/:title
 domain: intransitione.com
+production: true
 title: intransitione.com
 url: http://www.intransitione.com
+paginate: 3
 feed: http://feeds.feedburner.com/Intransitionecom
 disqus_shortname: intransitionecom
